[package]
name = "mmapio"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.9.1"
authors = ["henrylee2cn <henrylee2cn@gmail.com>", "dignifiedquire <me@dignifiedquire.com>", "Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/henrylee2cn/mmapio"
documentation = "https://docs.rs/mmapio"
description = "Cross-platform Rust API for memory-mapped file IO"
keywords = ["mmap", "memory-map", "io", "file"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi", "minwindef", "std", "sysinfoapi"] }

[dev-dependencies]
tempdir = "0.3"
